k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peace-international
  namespace: peace-international
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peace-international
  template:
    metadata:
      labels:
        app: peace-international
    spec:
      containers:
      - name: peace-international
        image: arjuntheguru/peace-international:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
