k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: peace-international
  namespace: peace-international
spec:
  selector:
    app: peace-international
  ports:
  - port: 80
    targetPort: 8080
