k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peace-international
  namespace: peace-international
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - peaceintl.arjunsubedi.com
    secretName: peace-international-tls
  rules:
  - host: peaceintl.arjunsubedi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: peace-international
            port:
              number: 80
